# map-tools

./: .gitmodules  CMakeLists.txt  handled.json  main.cpp  package-lock.json  package.json  parsed.json  sqliteORM.h  svgHandler.cpp  svgHandler.h  test.js  xmlParsed.json
modules/: svgHandler.js  vectorMath.js
old/: CMakeLists.txt
qt/build-dnw-map-tool-Desktop_Qt_5_12_2_MSVC2017_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_simpledata.h
qt/build-dnw-map-tool-Desktop_Qt_5_12_2_MSVC2017_32bit-Debug/debug/: dnw-map-tool.ilk  moc_mainwindow.cpp  moc_simpledata.cpp
qt/dnw-map-tool/: dnw-map-tool.pro  mainwindow.cpp  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  simpledata.h
